[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-cache"
version = "0.1.0"
description = "A pure-Python distributed cache: per-node LRU + TTL, consistent-hashing client, parameterised benchmark vs Redis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Tajaddin Gafarov", email = "gafarovtajaddin@gmail.com"}]
keywords = ["cache", "distributed", "lru", "ttl", "consistent-hashing", "redis", "infrastructure"]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = ["pytest>=8.0", "hypothesis>=6.100"]

[project.scripts]
distcache-bench = "distcache.bench_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
